2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Build fix: #ifdef'd out some code that doesn't work anymore.

        * bindings/objc/WebScriptObject.mm:
        (+[WebScriptObject throwException:]):
        (-[WebScriptObject setException:]):

2008-04-14  Gabor Loki  <loki@inf.u-szeged.hu>

        Reviewed by Geoffrey Garen.

        Bug 18489: Squirrelfish doesn't build on linux
        <https://bugs.webkit.org/show_bug.cgi?id=18489>

        * WebCore.pro: Add JavaScriptCore/VM into include path

2008-04-10  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Adjusted WebCore JS functions to the new "getConstructData" calling convention.

2008-03-30  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Adjusted WebCore JS functions to the new "getCallData" calling convention.

2008-05-19  Kuchhal  <kuchal@yahoo.com>

        Reviewed by Justin.

        <rdar://problem/5863412> Crash when Ctrl C is pressed after a series of specific mouse events (18506)

        * editing/markup.cpp:
        (WebCore::createMarkup): Null check.

2008-05-19  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        <rdar://problem/5912195> CrashTracer: [USER] 1 crash in Mail at -[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]

        * page/mac/AccessibilityObjectWrapper.mm:
        (visiblePositionForTextMarker):

2008-05-19  Ada Chan  <adachan@apple.com>

        Added CookieStorageWin.h/cpp, introducing methods to get/set the current CFHTTPCookieStorageRef.
        When setting cookies-related attributes in CFURLRequest, make sure we get them from the
        current CFHTTPCookieStorageRef.  Also, set the cookie storage in CFURLRequest.

        Reviewed by Steve Falkenburg.

        * WebCore.vcproj/WebCore.vcproj:
        * platform/network/cf/ResourceHandleCFNet.cpp:
        (WebCore::makeFinalRequest):
        * platform/network/cf/ResourceRequestCFNet.cpp: